Changes for 2.3.4

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 2.3.3

New features:
A.F....... [ZBXNEXT-219] added ability to remove resources missing in XML file (Ivo)
A.F....... [ZBX-1357] updated Polish and Slovak translations; thanks to Zabbix translators (Richlv)
A.......S. [ZBX-8473] improved performance of deleting triggers by API and server - events will be deleted only by the housekeeper (Krists, Sasha)
..F....... [ZBXNEXT-1826] added proxy name as host prefix in item queue details page (Ivo)
..F.....S. [ZBXNEXT-1848] added support for internal item zabbix[host,,maintenance] (Sasha)
........S. [ZBXNEXT-1848] added processing of internal items in maintenance without data collection (Sasha)
........S. [ZBXNEXT-2279] zabbix[proxy,,lastaccess] will be always performed by server (Sasha)
A.F.....S. [ZBXNEXT-1133] added support for custom expressions in action conditions (Krists)
...G...... [ZBXNEXT-1300] added low-level discovery support for enumerating CPUs on all supported platforms (Juris)
A......... [ZBX-8459] made possible CORS AJAX requests for JSON API (Andrejs)

Bug fixes:
...G...... [ZBX-8512] fixed processing of web.page.regexp without a newline character in the end of http GET response (Arturs)
..F....... [ZBX-8471] fixed removing slides from slideshows in cases when some slides have been deleted (Krists)
..F....... [ZBX-8509] fixed item custom multiplier formula default value to be "1" and not become unset in some cases (Krists)
A.F....... [ZBX-8430] fixed cascade removal of action conditions when deleting related discovery rule and checks (Andrejs)
..F....... [ZBX-8432] fixed multiselect resize and IE11 visual issues (Oleg)
..F....... [ZBX-8478] fixed slideshow handling in monitoring for slideshows without slides (Krists)
A......... [ZBX-8493] fixed usergroup.massadd API call to not create duplicate entries in "rights" table (Krists)