@@ -35,7 +35,7 @@ UNIQUE		|2		|name
 TABLE|hosts|hostid|ZBX_DATA
 FIELD		|hostid		|t_id		|	|NOT NULL	|0
 FIELD		|proxy_hostid	|t_id		|	|NULL		|0			|1|hosts	|hostid		|RESTRICT
-FIELD		|host		|t_varchar(64)	|''	|NOT NULL	|ZBX_PROXY
+FIELD		|host		|t_varchar(128)	|''	|NOT NULL	|ZBX_PROXY
 FIELD		|status		|t_integer	|'0'	|NOT NULL	|ZBX_PROXY
 FIELD		|disable_until	|t_integer	|'0'	|NOT NULL	|ZBX_NODATA
 FIELD		|error		|t_varchar(128)	|''	|NOT NULL	|ZBX_NODATA
@@ -62,7 +62,7 @@ FIELD		|jmx_disable_until|t_integer	|'0'	|NOT NULL	|ZBX_NODATA
 FIELD		|jmx_available	|t_integer	|'0'	|NOT NULL	|ZBX_NODATA
 FIELD		|jmx_errors_from|t_integer	|'0'	|NOT NULL	|ZBX_NODATA
 FIELD		|jmx_error	|t_varchar(128)	|''	|NOT NULL	|ZBX_NODATA
-FIELD		|name		|t_varchar(64)	|''	|NOT NULL	|ZBX_PROXY
+FIELD		|name		|t_varchar(128)	|''	|NOT NULL	|ZBX_PROXY
 FIELD		|flags		|t_integer	|'0'	|NOT NULL	|0
 FIELD		|templateid	|t_id		|	|NULL		|0			|3|hosts	|hostid
 FIELD		|description	|t_shorttext	|''	|NOT NULL	|0
@@ -1278,4 +1278,4 @@ INDEX		|1		|itemid
 TABLE|dbversion||
 FIELD		|mandatory	|t_integer	|'0'	|NOT NULL	|
 FIELD		|optional	|t_integer	|'0'	|NOT NULL	|
-ROW		|2030112	|2030115
+ROW		|2030117	|2030117
