@@ -591,19 +591,6 @@ class CHostInterface extends CApiService {
 	 * @param array $interface
 	 */
 	protected function checkDns(array $interface) {
-		if (mb_strlen($interface['dns']) > 64) {
-			self::exception(
-				ZBX_API_ERROR_PARAMETERS,
-				_n(
-					'Maximum DNS name length is %1$d characters, "%2$s" is %3$d character.',
-					'Maximum DNS name length is %1$d characters, "%2$s" is %3$d characters.',
-					64,
-					$interface['dns'],
-					mb_strlen($interface['dns'])
-				)
-			);
-		}
-
 		if (!empty($interface['dns']) && !preg_match('/^'.ZBX_PREG_DNS_FORMAT.'$/', $interface['dns'])) {
 			self::exception(ZBX_API_ERROR_PARAMETERS, _s('Incorrect interface DNS parameter "%s" provided.', $interface['dns']));
 		}
