@@ -21,7 +21,7 @@
 
 define('ZABBIX_VERSION',     '2.3.4');
 define('ZABBIX_API_VERSION', '2.3.4');
-define('ZABBIX_DB_VERSION',	 2030112);
+define('ZABBIX_DB_VERSION',	 2030117);
 
 define('ZABBIX_COPYRIGHT_FROM', '2001');
 define('ZABBIX_COPYRIGHT_TO',   '2014');
