@@ -1,6 +1,7 @@
 Changes for 2.3.4
 
 New features:
+A.F.I..PS. [ZBX-7720] increased size of "Host name", "Visible host name" and "Proxy name" fields to 128 characters (Sasha)
 
 Bug fixes:
 
